# data-gen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  project.toml  pyproject.toml  requirements.txt  stup.py
.github/workflows/: ci.yml  main.yml
docs/: api_reference.md  getting_started.md  image.md  index.md  tabular.md  text.md  timeseries.md
examples/: example_notebook.ipynb
examples/image/: image_augmentation.py
examples/tabular/: tabular_generation.py
examples/text/: text_ai_generation.py  text_pattern_generation.py
examples/timeseries/: timeseries_generation.py
src/data_gen/: __init__.py
src/data_gen/core/: __init__.py  base.py  config.py  utils.py
src/data_gen/image/: __init__.py  augmentor.py  dcgan.py  evaluation.py  utils.py
src/data_gen/tabular/: __init__.py  ctgan.py  evaluation.py  gaussian_copula.py  utils.py
src/data_gen/text/: __init__.py  evaluation.py  markov.py  template.py  transformer.py  utils.py
src/data_gen/timeseries/: __init__.py  evaluation.py  par.py  utils.py
src/syntharc/: __init__.py
src/syntharc/core/: __init__.py  base.py  config.py  utils.py
src/syntharc/image/: __init__.py  augmentor.py  evaluation.py  utils.py
src/syntharc/tabular/: __init__.py  ctgan.py  gaussian_copula.py  utils.py
src/syntharc/text/: __init__.py  evaluation.py  markov.py  template.py  transformer.py  utils.py
src/syntharc/timeseries/: __init__.py  evaluation.py  par.py  utils.py
tests/integration/: test_image_integration.py  test_pipeline_integration.py  test_tabular_integration.py  test_text_integration.py  test_timeseries_integration.py
tests/test_image/: test_augmentor.py  test_dcgan.py  test_evaluation.py
tests/test_tabular/: test_ctgan.py  test_evaluation.py  test_gaussian_copula.py
tests/test_text/: test_evaluation.py  test_markov.py  test_template.py  test_transformer.py
tests/test_timeseries/: test_evaluation.py  test_par.py
