[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntharc"
version = "0.1.0.post1"
description = "Unified synthetic data generation for tabular, time-series, image, and text data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Fahad Abdullah", email = "fahadai.co@gmail.com"},
]
keywords = [
    "synthetic-data",
    "syntharceration",
    "augmentation",
    "tabular",
    "time-series",
    "image",
    "text",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "Pillow>=9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "torch>=2.0",
]

[project.optional-dependencies]
tabular = [
    "sdv>=1.10",
]
timeseries = [
    "sdv>=1.10",
]
image = [
    "albumentations>=1.4",
    "opencv-python-headless>=4.9",
]
text = [
    "transformers>=4.40",
    "accelerate>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs",
    "types-PyYAML",
    "types-Pillow",
]
all = [
    "syntharc[tabular]",
    "syntharc[timeseries]",
    "syntharc[image]",
    "syntharc[text]",
    "syntharc[dev]",
]

[project.urls]
Homepage = "https://github.com/FAbdullah17/syntharc"
Repository = "https://github.com/FAbdullah17/syntharc"
Issues = "https://github.com/FAbdullah17/syntharc/issues"
Documentation = "https://github.com/FAbdullah17/syntharc/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["syntharc"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["syntharc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
